--- a/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
+++ b/OpenGLExample_29/OpenGLExample_29/OpenGLExample_29.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="src\to_render.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\Dev_Texture.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Dev_Map.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\frame_buffer.cpp">
@@ -90,6 +96,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\geometry.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Dev_Texture.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Dev_Map.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
